mern-stack-example/mern/mern-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /record(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mern-backend-service
                port:
                  number: 5050

          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-frontend-service
                port:
                  number: 5173
